[gd_scene load_steps=5 format=3 uid="uid://cwh2yiqsee2af"]

[ext_resource type="Script" uid="uid://gkj6gan4f1iy" path="res://player_battling.gd" id="1_7b5ll"]
[ext_resource type="Texture2D" uid="uid://bliuv58lu7g8v" path="res://Sprites/BirdKnight.png" id="2_7b5ll"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpj4t"]
size = Vector2(11, 18.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7b5ll"]
size = Vector2(23, 14)

[node name="PlayerBattling" type="CharacterBody2D"]
script = ExtResource("1_7b5ll")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.75)
shape = SubResource("RectangleShape2D_dpj4t")

[node name="Center" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Center"]
position = Vector2(0, 8.5)
texture = ExtResource("2_7b5ll")
offset = Vector2(0, -9.5)

[node name="Attacks" type="Area2D" parent="Center" groups=["attack"]]
modulate = Color(1, 0, 0, 1)
collision_layer = 4
collision_mask = 4

[node name="Front" type="CollisionShape2D" parent="Center/Attacks"]
position = Vector2(16.5, 0)
shape = SubResource("RectangleShape2D_7b5ll")
debug_color = Color(1, 1, 1, 0.41960785)

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Coyote" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="StillJumping" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Attack" type="Timer" parent="."]
one_shot = true

[node name="AttackBuffer" type="Timer" parent="."]
one_shot = true
